<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mining Tool</string>
    <string name="action_settings">Ajustes</string>
    <string name="obra_civil">Obra civil</string>
    <string name="mineria">Minería</string>
    <string name="acerca_de">Acerca de</string>
    <string name="proximamente">Próximamente&#8230;</string>
    <string name="error">Se ha roto algo&#8230;</string>
    <string name="campos_vacios">Debes rellenar todos los campos&#8230;</string>
    <string name="autor">Desarrollado por Aritz Piñero.\nAsesorado por Jokin Duarte.</string>
    <string name="contenido_acerca_de">Esta aplicación pretende ser una herramienta para estudiantes y profesionales en ingeniería de minas y civil para facilitar la selección de equipos en proyectos.\n</string>
    <string name="subterranea">Subterránea</string>
    <string name="cielo_abierto">A cielo abierto</string>
    <string name="mineral_ind">Mineral industrial / Carbón</string>
    <string name="metal">Metal</string>
    <string name="arido">Árido</string>
    <string name="esteril">Estéril</string>
    <string name="mineral">Mineral</string>
    <string name="rcs_mineral">R.C.S. mineral</string>
    <string name="rcs_esteril">R.C.S. estéril</string>
    <string name="vol_reservas">Reservas</string>
    <string name="ton_anno">Producción</string>
    <string name="ratio">Ratio</string>
    <string name="den_mineral">Densidad mineral</string>
    <string name="den_esteril">Densidad estéril</string>
    <string name="transp_esteril">Distancia transp. estéril</string>
    <string name="transp_mineral">Distancia transp. mineral</string>
    <string name="pendiente">Pendiente del terreno</string>
    <string name="calcular">Calcular</string>
    <string name="arranque">Arranque</string>
    <string name="carga">Carga</string>
    <string name="transporte">Transporte</string>
    <string name="maquinaria">Maquinaria</string>
    
    <string name="m1">Perforadora</string>
    <string name="m2">Excavadora hidráulica</string>
    <string name="m3">Rotopala o dragalina</string>
    <string name="m4">Excavadora de cables</string>
    <string name="m5">Cargadora de ruedas</string>
    <string name="m6">Bulldozer (Ripper)</string>
    
    <string name="t1">Cinta transportadora</string>
    <string name="t2">Volquete ( &lt; 80T )</string>
    <string name="t3">Volquete ( > 80T )</string>
    
    <string name="ms1">Jumbo</string>
    <string name="ms2">Rozadura puntual</string>
    <string name="ms3">LHD</string>
    <string name="ms4">Volquete</string>
    <string name="ms5">Cinta transportadora</string>
    <string name="ms6">Perforadora (Barrenos largos)</string>
    <string name="ms7">Perforadora (Abanicos)</string>
    <string name="ms8">Rozadora de tajo largo</string>
    <string name="ms9">Rozadora continua</string>
    
    <string name="cam_pilares">Cámaras y pilares</string>
    <string name="cam_almacen">Cámaras almacén</string>
    <string name="subniveles">Subniveles</string>
    <string name="corte_relleno">Corte y relleno</string>
    <string name="hund_subniveles">Hundimiento por subniveles</string>
    <string name="hund_bloques">Hundimiento por bloques</string>
    <string name="frente_largo">Frente largo</string>
    <string name="gal_prep">Galería para preparación</string>
    <string name="relleno">Relleno</string>
    <string name="twitter">Twitter</string>
    <string name="github">Github</string>
    <string name="correo">Correo</string>
	<string name="mag_rcs">MPa</string>
	<string name="mag_reservas">años</string>
	<string name="mag_produccion">t/año</string>
	<string name="mag_densidad">g/cm3</string>
	<string name="mag_distancia">m</string>
	<string name="mag_pendiente">%</string>

</resources>
